# python-matjip

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: fastaop-ci.yml
app/: config.py  main.py
app/api/: recommend.py
app/models/: schemas.py
app/services/: ai_service.py  hf_service.py  place_service.py  recommendation_service.py
